--- a/src/app/components/organisms/control-panel/control-panel.component.html
+++ b/src/app/components/organisms/control-panel/control-panel.component.html
@@ -1,7 +1,7 @@
 <app-expansion-panel [fractal]="fractal" (closed)="closed()">
   @if (shouldRender()) {
     <mat-accordion>
-      @for (fractal of fractal.list; track fractal.dto.id) {
+      @for (fractal of fractal.fractalsList; track fractal.dto.id) {
         <app-control-panel [fractal]="fractal" />
       }
     </mat-accordion>
