--- a/src/app/components/atoms/form/form.component.html
+++ b/src/app/components/atoms/form/form.component.html
@@ -1,19 +1,22 @@
-<form [formGroup]="formRecord">
-  @for (name of names; track name) {
-    <mat-form-field class="form-field">
-      <mat-label i18n>{{ name }}</mat-label>
-      <input #inputElementRef [type]="name" matInput formControlName="{{ name }}" />
-      @if (inputElementRef.value && !formRecord.get(name)?.disabled) {
-        <button
-          type="button"
-          matSuffix
-          mat-icon-button
-          i18n-aria-label
-          aria-label="Clear input"
-          (click)="formRecord.get(name)?.setValue('')">
-          <mat-icon>close</mat-icon>
-        </button>
-      }
-    </mat-form-field>
-  }
-</form>
+@if (fractal.form; as form) {
+  <form [formGroup]="form">
+    @for (name of names; track name) {
+      <h1>Name {{ name }}</h1>
+      <mat-form-field class="form-field">
+        <mat-label i18n>{{ name }}</mat-label>
+        <input #inputElementRef [type]="name" matInput [formControlName]="name" />
+        @if (inputElementRef.value && !form.get(name)?.disabled) {
+          <button
+            type="button"
+            matSuffix
+            mat-icon-button
+            i18n-aria-label
+            aria-label="Clear input"
+            (click)="form.get(name)?.setValue('')">
+            <mat-icon>close</mat-icon>
+          </button>
+        }
+      </mat-form-field>
+    }
+  </form>
+}
