--- a/src/app/components/molecules/form-card/form-card.component.html
+++ b/src/app/components/molecules/form-card/form-card.component.html
@@ -9,7 +9,7 @@
     </mat-card-title-group>
   </mat-card-header>
   <mat-card-content>
-    <app-form [formRecord]="formRecord" />
+    <app-form [fractal]="fractal" />
     <ng-content />
   </mat-card-content>
 </mat-card>
