--- a/src/app/components/atoms/collection/collection.component.html
+++ b/src/app/components/atoms/collection/collection.component.html
@@ -3,7 +3,7 @@
     <ng-container [matColumnDef]="column">
       <th mat-header-cell *matHeaderCellDef>{{ column }}</th>
       <td mat-cell *matCellDef="let row">
-        @if (controlsCollection) {
+        @if (like === 'controls') {
           {{ column === 'indicator' ? row.indicator : row.data }}
         } @else {
           {{ row.data(column) }}
@@ -16,7 +16,7 @@
     mat-row
     *matRowDef="let row; columns: columns"
     appTap
-    (hold)="onHold(controlsCollection ? fractal : row)"
-    (touch)="onTouch(controlsCollection ? fractal : row)"
+    (hold)="onHold(like === 'controls' ? fractal : row)"
+    (touch)="onTouch(like === 'controls' ? fractal : row)"
     [class.clicked-row]="clickedRow(row)"></tr>
 </table>
