--- a/src/app/components/organisms/control-panel/expansion-panel/expansion-panel.component.html
+++ b/src/app/components/organisms/control-panel/expansion-panel/expansion-panel.component.html
@@ -12,8 +12,8 @@
     >
   </mat-expansion-panel-header>
   <div class="children">
-    <app-collection class="collection" [rows]="us.$currents()" [fractal]="fractal" [controlsCollection]="true" />
-    @if (isCollection) {
+    <app-collection class="collection" like="controls" [rows]="us.$currents()" [fractal]="fractal" />
+    @if (hasColumns) {
       <app-collection class="collection" [rows]="us.$currents()" [fractal]="fractal" />
     }
     @if (fractal.fractals) {
