--- a/src/app/components/atoms/form/form.component.html
+++ b/src/app/components/atoms/form/form.component.html
@@ -1,6 +1,6 @@
 @if (fractal.form; as form) {
   <form [formGroup]="form">
-    @for (name of names; track name) {
+    @for (name of fractal.columns; track name) {
       <mat-form-field class="form-field">
         <mat-label i18n>{{ name }}</mat-label>
         <input #inputElementRef [type]="name" matInput [formControlName]="name" />
