--- a/src/app/components/organisms/control-panel/expansion-panel/expansion-panel.component.html
+++ b/src/app/components/organisms/control-panel/expansion-panel/expansion-panel.component.html
@@ -12,9 +12,9 @@
     >
   </mat-expansion-panel-header>
   <div class="children">
-    <app-collection class="collection" like="controls" [rows]="us.$currents()" [fractal]="fractal" />
+    <app-collection class="collection" like="controls" [fractal]="fractal" />
     @if (hasColumns) {
-      <app-collection class="collection" [rows]="us.$currents()" [fractal]="fractal" />
+      <app-collection class="collection" [fractal]="fractal" />
     }
     @if (fractal.fractals) {
       <ng-content />
