--- a/src/app/components/organisms/sidenav/sidenav.component.html
+++ b/src/app/components/organisms/sidenav/sidenav.component.html
@@ -11,7 +11,7 @@
           @if (taps.find(column); as tap) {
             <app-tap
               [tap]="tap"
-              (touch)="tap.parent?.cursor === 'Collections' ? collectionTouched($event) : modifierTouched($event)" />
+              (touch)="tap.parent.cursor === 'Collections' ? collectionTouched($event) : modifierTouched($event)" />
           }
         }
       </mat-list>
