--- a/src/app/components/organisms/control-panel/expansion-panel/expansion-panel.component.html
+++ b/src/app/components/organisms/control-panel/expansion-panel/expansion-panel.component.html
@@ -1,6 +1,6 @@
 <mat-expansion-panel
   hideToggle
-  [ngClass]="this.cps.$fractal() === fractal ? 'active' : ''"
+  [ngClass]="this.ss.$parent() === fractal ? 'active' : ''"
   (closed)="closed.emit(fractal)"
   (afterExpand)="afterExpand(fractal)">
   <mat-expansion-panel-header>
