--- a/src/app/components/organisms/screen/screen.component.html
+++ b/src/app/components/organisms/screen/screen.component.html
@@ -1,19 +1,20 @@
-@if (rts.$fractal(); as root) {
-  @if (cs.$fractal(); as collection) {
-    @if (Modifier) {
-      <app-modifier />
-    }
-    @if (!Modifier) {
-      @switch (Collections) {
-        @case ('Home') {
-          <h1>Home</h1>
-        }
-        @case ('App') {
-          <app-control-panel [fractal]="root" />
-        }
-        @default {
-          <app-collection [fractal]="collection" />
-        }
+@let root = bs.$root();
+@let parent = ss.$parent();
+
+@if (root && parent) {
+  @if (Modifier) {
+    <app-modifier />
+  }
+  @if (!Modifier) {
+    @switch (Collections) {
+      @case ('Home') {
+        <h1>Home</h1>
+      }
+      @case ('App') {
+        <app-control-panel [fractal]="root" />
+      }
+      @default {
+        <app-collection [fractal]="parent" />
       }
     }
   }
