--- a/src/app/components/organisms/control-panel/control-panel.component.html
+++ b/src/app/components/organisms/control-panel/control-panel.component.html
@@ -2,7 +2,9 @@
   @if (shouldRender()) {
     <mat-accordion>
       @for (cursor of fractal.split('Sort'); track cursor) {
-        <app-control-panel [fractal]="fractal.find(cursor)" />
+        @if (fractal.find(cursor); as fractal) {
+          <app-control-panel [fractal]="fractal" />
+        }
       }
     </mat-accordion>
   }
