add ability to new

--- a/src/app/components/atoms/form/form.component.html
+++ b/src/app/components/atoms/form/form.component.html
@@ -1,34 +1,20 @@
-@let form = fractal.form;
-
-<form [formGroup]="form">
+<form>
   @for (name of fractal.columns; track name) {
-    @switch (fractal.dto.controls[name].input) {
+    @let control = fractal.getControl(name);
+    @let controlFields = fractal.getControlFields(name);
+    @let dataCtr = controlFields.data;
+    @let inputCtr = controlFields.input;
+
+    @switch (control.input) {
+      @case (controlInputs.New) {
+        <app-select className="form-field" [name]="name" [opts]="controlInputsArray" [formCtr]="inputCtr" />
+        <app-input [name]="name" [formCtr]="dataCtr" />
+      }
       @case (controlInputs.Select) {
-        <mat-form-field class="form-field">
-          <mat-label>{{ name }}</mat-label>
-          <mat-select [formControlName]="name">
-            @for (opt of fractal.dto.controls[name].data.split(':'); track opt) {
-              <mat-option value="{{ opt }}">{{ opt }}</mat-option>
-            }
-          </mat-select>
-        </mat-form-field>
+        <app-select className="form-field" [name]="name" [opts]="control.data.split(':')" [formCtr]="dataCtr" />
       }
       @default {
-        <mat-form-field class="form-field">
-          <mat-label>{{ name }}</mat-label>
-          <input #inputElementRef [type]="name" matInput [formControlName]="name" />
-          @if (inputElementRef.value && !form.get(name)?.disabled) {
-            <button
-              type="button"
-              matSuffix
-              mat-icon-button
-              i18n-aria-label
-              aria-label="Clear input"
-              (click)="form.get(name)?.setValue('')">
-              <mat-icon>close</mat-icon>
-            </button>
-          }
-        </mat-form-field>
+        <app-input [name]="name" [formCtr]="dataCtr" />
       }
     }
   }
