--- a/src/app/components/atoms/select/select.component.html
+++ b/src/app/components/atoms/select/select.component.html
@@ -1,7 +1,7 @@
-<mat-form-field>
-  <mat-label>{{ label }}</mat-label>
-  <mat-select [formControl]="formControl">
-    @for (opt of options; track opt) {
+<mat-form-field [class]="className" class="app-form-field">
+  <mat-label>{{ name }}</mat-label>
+  <mat-select [formControl]="formCtr">
+    @for (opt of opts; track opt) {
       <mat-option value="{{ opt }}">{{ opt }}</mat-option>
     }
   </mat-select>
