--- a/src/app/components/organisms/modifier/modifier.component.html
+++ b/src/app/components/organisms/modifier/modifier.component.html
@@ -1,5 +1,5 @@
 @let toAdd = ss.$toAdd();
-@let parent = ss.$parent();
+@let parent = ss.$toShow();
 @let toUpdate = ss.$toUpdate();
 
 <div class="modifier">
