--- a/src/app/components/organisms/sidenav/sidenav.component.html
+++ b/src/app/components/organisms/sidenav/sidenav.component.html
@@ -7,14 +7,14 @@
     position="end">
     @if (ts.$taps(); as taps) {
       <mat-list>
-        @for (column of taps.splitData('Sort'); track column) {
+        @for (column of taps.sort; track column) {
           @if (taps.findFractal(column); as tap) {
             @switch (tap.parent.cursor) {
-              @case ('Modifiers') {
+              @case (appEntities.Modifiers) {
                 <app-tap [tap]="tap" (hold)="modifierHeld($event)" (touch)="modifierTouched($event)" />
               }
-              @case ('Collections') {
-                <app-tap [tap]="tap" (touch)="collectionTouched($event)" />
+              @case (appEntities.Pages) {
+                <app-tap [tap]="tap" (touch)="pageTouched($event)" />
               }
             }
           }
