--- a/src/app/components/atoms/table/table.component.html
+++ b/src/app/components/atoms/table/table.component.html
@@ -1,18 +1,19 @@
 <table mat-table [dataSource]="dataSource">
   @for (column of columns; track column) {
+    <h1>column {{ column }}</h1>
     <ng-container [matColumnDef]="column">
       <th mat-header-cell *matHeaderCellDef>{{ column }}</th>
       <td mat-cell *matCellDef="let row">
-        @if (like === 'controls') {
-          {{ column === 'indicator' ? row.indicator : row.data }}
-        } @else {
+        @if (isCollection) {
           {{ row.getData(column) }}
+        } @else {
+          {{ row[column] }}
         }
       </td>
     </ng-container>
   }
   <tr mat-header-row *matHeaderRowDef="columns; sticky: true"></tr>
-  @if (like === 'controls') {
+  @if (isCollection) {
     <tr
       mat-row
       *matRowDef="let row; columns: columns"
