--- a/src/app/components/organisms/control-panel/expansion-panel/expansion-panel.component.html
+++ b/src/app/components/organisms/control-panel/expansion-panel/expansion-panel.component.html
@@ -14,10 +14,7 @@
     >
   </mat-expansion-panel-header>
   <div class="children">
-    <app-sheet class="collection" like="controls" [fractal]="fractal" />
-    @if (hasColumns) {
-      <app-sheet class="collection" [fractal]="fractal" />
-    }
+    <app-table class="collection" [fractal]="fractal" />
     @if (fractal.fractals) {
       <ng-content />
     }
