--- a/src/app/components/organisms/screen/screen.component.html
+++ b/src/app/components/organisms/screen/screen.component.html
@@ -14,7 +14,7 @@
         <app-control-panel [fractal]="root" />
       }
       @default {
-        <app-sheet [fractal]="parent" />
+        <app-table [fractal]="parent" />
       }
     }
   }
