--- a/src/app/components/organisms/screen/screen.component.html
+++ b/src/app/components/organisms/screen/screen.component.html
@@ -1,5 +1,5 @@
 @let root = ent.$root();
-@let parent = ss.$toShow();
+@let parent = ss.$currentFractal();
 
 @if (root && parent) {
   @if (Modifiers) {
