--- a/src/app/components/atoms/table/table.component.html
+++ b/src/app/components/atoms/table/table.component.html
@@ -5,7 +5,7 @@
       <th mat-header-cell *matHeaderCellDef>{{ column }}</th>
       <td mat-cell *matCellDef="let row">
         @if (isCollection) {
-          {{ row.getData(column) }}
+          {{ row.getControlData(column) }}
         } @else {
           {{ row[column] }}
         }
@@ -17,15 +17,15 @@
     <tr
       mat-row
       *matRowDef="let row; columns: columns"
-      (click)="ss.setToUpdate(fractal)"
-      [class.clicked-row]="ss.$toUpdate().includes(fractal)"></tr>
-  } @else {
-    <tr
-      mat-row
-      *matRowDef="let row; columns: columns"
       appTap
       (hold)="ss.select(row)"
       (touch)="ss.setToUpdate(row)"
       [class.clicked-row]="ss.$toUpdate().includes(row)"></tr>
+  } @else {
+    <tr
+      mat-row
+      *matRowDef="let row; columns: columns"
+      (click)="ss.setToUpdate(fractal)"
+      [class.clicked-row]="ss.$toUpdate().includes(fractal)"></tr>
   }
 </table>
