--- a/src/app/components/molecules/form-card/form-card.component.html
+++ b/src/app/components/molecules/form-card/form-card.component.html
@@ -4,8 +4,7 @@
       @if (showCancelButton) {
         <button top type="button" mat-flat-button (click)="cancel.emit()">Cancel</button>
       }
-      <mat-card-title>{{ title }}</mat-card-title>
-      <mat-card-subtitle class="subtitle">{{ subtitle }}</mat-card-subtitle>
+      <mat-card-title>{{ fractal.cursor }}</mat-card-title>
     </mat-card-title-group>
   </mat-card-header>
   <mat-card-content>
