--- a/src/app/components/atoms/table/table.component.html
+++ b/src/app/components/atoms/table/table.component.html
@@ -1,19 +1,14 @@
 <table mat-table [dataSource]="dataSource">
   @for (column of columns; track column) {
-    <h1>column {{ column }}</h1>
     <ng-container [matColumnDef]="column">
       <th mat-header-cell *matHeaderCellDef>{{ column }}</th>
       <td mat-cell *matCellDef="let row">
-        @if (isCollection) {
-          {{ row.getControlData(column) }}
-        } @else {
-          {{ row[column] }}
-        }
+        {{ printFractals ? row.getControlData(column) : row[column] }}
       </td>
     </ng-container>
   }
   <tr mat-header-row *matHeaderRowDef="columns; sticky: true"></tr>
-  @if (isCollection) {
+  @if (printFractals) {
     <tr
       mat-row
       *matRowDef="let row; columns: columns"
