--- a/src/app/components/organisms/control-panel/expansion-panel/expansion-panel.component.html
+++ b/src/app/components/organisms/control-panel/expansion-panel/expansion-panel.component.html
@@ -14,9 +14,9 @@
     >
   </mat-expansion-panel-header>
   <div class="children">
-    <app-controls-table class="collection" [fractal]="fractal" />
+    <app-table [fractal]="fractal" [printControls]="true" />
     @if (fractal.isCollection) {
-      <app-fractals-table [fractal]="fractal" />
+      <app-table class="collection" [fractal]="fractal" />
     }
     @if (fractal.fractals) {
       <ng-content />
